<resources>
    <string name="app_name">ClothHangerApp</string>
    <string name="saludo">¡Es un gusto tenerte aquí de nuevo!</string>
    <string name="no_tengo_cuenta">No tengo una cuenta,</string>
    <string name="button_registrarme">registrarme.</string>
    <string name="hint_email">Email</string>
    <string name="hint_contrasenia">Contraseña</string>
    <string name="hint_buscar">Buscar</string>
    <string name="entrar">Entrar</string>

    //Pantalla Inicio
    <string name="bienvenida">Crea tu propio estilo, ahora.</string>

    //Pantalla Detalle Prenda
    <string name="editar">Editar</string>
    <string name="borrar">Borrar</string>
    <string name="categoria">Categoría:</string>
    <string name="color">Color:</string>
    <string name="estampado">Estampado:</string>
    <string name="tags">Tags:</string>
    <string name="total_usos">Total de usos:</string>
    <string name="usos_mes">Usos este mes:</string>
    <string name="top_flores">Top Flores</string>
    <string name="error">Error</string>
    <string name="confirmacion">Confirmación</string>
    <string name="confirmar_pregunta">¿Seguro que desea eliminar %s?</string>
    <string name="cancelar">Cancelar</string>
    <string name="exito">La prenda %s ha sido eliminada con éxito.</string>
    <string name="si">Sí</string>
    <string name="no">No</string>

    //Pantalla Registro Diario
    <string name="titulo_hoy">Mi Outfit de Hoy</string>
    <string name="seleccionar_top">Seleccionar Top</string>
    <string name="seleccionar_bottom">Seleccionar Bottom</string>
    <string name="seleccionar_bodysuit">Seleccionar Bodysuit</string>
    <string name="seleccionar_zapatos">Seleccionar Zapatos</string>
    <string name="seleccionar_accesorios">Seleccionar Accesorios</string>

    //Pantallas Iniciales
    <string name="titulo_identificacion">¡Identifícate!</string>
    <string name="pregunta_cuenta">¿Ya tienes una cuenta?</string>
    <string name="pregunta_nuevo">¿Eres nuevo?</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>

    <string name="tops_tag">Tops</string>
    <string name="bottoms_tag">Bottoms</string>
    <string name="zapatos_tag">Zapatos</string>
    <string name="bodysuits_tag">Bodysuits</string>
    <string name="accesorios_tag">Accesorios</string>

    // Pantalla Registrarse
    <string name="dejanos_conocerte">¡Déjanos conocerte!</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_confirmar_contrasenia">Confirmar contraseña</string>
    <string name="ya_tengo_cuenta">Ya tengo una cuenta,</string>
    <string name="button_iniciar_sesion">iniciar sesión</string>
    <string name="registrar">Registrar</string>

    // Pantalla Configuración
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="editar_informacion">Editar Información</string>

    // Pantalla Registrar Prenda
    <string name="titulo">Registrar Prenda</string>
    <string name="hint_nombre_prenda">Nombre de la prenda</string>
    <string name="hint_nombre_color">Nombre del color (opcional)</string>
    <string name="elegir_color">Elige un color</string>
    <string name="estampado_si">Sí</string>
    <string name="estampado_no">No</string>
    <string name="verano">Verano</string>
    <string name="invierno">Invierno</string>
    <string name="mas">+</string>
    <string name="cute">Cute</string>
    <string name="imagen">Imagen</string>
    <string name="confirmar">Confirmar</string>
    <string name="actualizar">Actualizar prenda</string>
    <string name="registrar_prenda">Registrar prenda</string>
    <string name="registro_exito">Prenda registrada con éxito.</string>
    <string name="actualizacion_exito">Prenda actualizada con éxito.</string>

    // Card de guardar cambios
    <string name="guardar">¿Guardar cambios?</string>
    <string name="agregar_prenda">+</string>

    // Pantalla de outfits
    <string name="outfits">Mis Outfits</string>
    <string name="crear_outfit">Crear Outfit</string>
    <string name="fecha">26/03/2025</string>
    <string name="titulo_perfil">Perfil</string>
    <string name="boton_cancelar_text">Cancelar</string>
    <string name="mis_prendas">Mis Prendas</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="casual">Casual</string>
    <string name="formal">Formal</string>
    <string name="deportivo">Deportivo</string>
    <string name="b_sico">Básico</string>
    <string name="fiesta">Fiesta</string>

    // Pantalla de detalle outfit
    <string name="titulo_outfit">Outfit del</string>
</resources>
